# newsify_api

./: .env.example  .gitignore  .htaccess  CPANEL_DEPLOYMENT.md  README.md  SCHEDULER_SETUP.md  add_comment_bookmark_tables.py  check_config.py  check_posts.py  check_sqlite.py  cj36.db  config_output.txt  create_admin.py  create_admin_simple.py  create_sample_posts.py  creation_log.txt  db_status.txt  debug_output.txt  debug_script.py  delete_home_category.py  init_database.py  main.py  migrate_user_table.py  passenger_wsgi.py  publish_scheduled_posts.py  pyproject.toml  recreate_tables.py  requirements.txt  seed_categories.py  start_dev.sh  test.db  test_output.txt
src/cj36/: dependencies.py  main.py  models.py  scheduler.py
src/cj36/api/v1/: bookmarks.py  categories.py  comments.py  posts.py  router.py  system.py  users.py
src/cj36/core/: config.py  database.py  email.py  security.py  seed.py  seed_data.py
src/cj36/dependencies/: __init__.py
tests/: test_api.py
